# scorched_earth

./: Cargo.toml
assets/shaders/: glow.glslf
src/: app.rs  assets.rs  ballistics.rs  explosion.rs  game_state.rs  geometry.rs  input.rs  landscape.rs  lib.rs  main.rs  missile.rs  player.rs  resources.rs  round.rs  shaders.rs  tank.rs  types.rs  utils.rs  window.rs  world.rs
src/geometry/: circle.rs  ellipse.rs
src/scenes/: game_play.rs  main_menu.rs  mod.rs  select_count_of_players.rs
