[package]
name = "scorched_earth"
version = "0.1.0"
authors = ["Kirill Kuzminykh <cykooz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noise = "0.6.0"
ggez = "0.5.1"
nalgebra = "0.18.1"
bytecount = "0.6.0"


[dependencies.rand]
version = "0.7.2"
features = ["small_rng"]


[dependencies.cgmath]
version = "0.17.0"
features = ["mint"]


[profile.release]
#lto = true
opt-level = 3
#codegen-units = 1
